2008-03-01  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>

	* po/zh_CN.po,
	po/zh_TW.po,
	src/mainframe.cpp,
	src/mainframe.h: Add a hotkey and a menu item for Simple Mode.

2008-02-21  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::entries), po/zh_CN.po, po/zh_TW.po:
	Fix some small problems with CMainFrame::entries (mnemonics,
	stock_ids, tooltips) and update translations.

2008-02-21  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::entries) (ui_info): Remove duplicate
	menu items while keeping the alternative accelerators. Remove Ctrl+W
	due to conflict with BBS posting key combination.

2008-02-21  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.cpp (CMainFrame::MakeUI): Fix wrong mnemonic for menu
	item "Connect/Jump to/Page 10".

2008-02-21  Jason Xia  <jasonxh@gmail.com>

	* src/mainframe.h, src/mainframe.cpp
	(CMainFrame::m_JumpMenuItems) (CMainFrame::OnJumpToPage)
	(CMainFrame::MakeUI): Fix unusable JumpToPage hotkeys(ALT+NUM) in
	full-screen mode.

2008-02-20  Jim Huang  <jserv.tw@gmail.com>

	* src/mainframe.h
	(CMainFrame::OnFirstCon) (CMainFrame::OnLastCon): New member functions
	as callbacks for first/last connections.

	* src/mainframe.cpp
	(CMainFrame::entries): Improve connection operations.
	(MainFrame::OnFirstCon) (CMainFrame::OnLastCon): Likewise.
	Taken from
	http://into-wild.blogspot.com/2008/01/pcmanx-modification.html .

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/core/stringutil.h,
	src/core/stringutil.cpp (strncmpi): Removed.
	Replaced with strncasecmp. (confirming to POSIX.1-2001)

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/core/caret.cpp,
	src/core/termdata.cpp,
	src/core/caret.h,
	src/core/stringutil.cpp,
	src/core/site.cpp,
	src/core/termdata.h,
	src/core/font.cpp,
	src/core/stringutil.h,
	src/core/site.h: Use consistent GPL licensing terms.

2008-02-16  Jim Huang  <jserv.tw@gmail.com>

	* src/qqwryseeker/qqwryseeker.c,
	src/core/proxy.c,
	src/core/proxy.h,